mdix-php/src/Mdix/Internal/ffi_header.h

typedef int            int32_t;
/* ── Type discriminants ──────────────────────────────────────────────────── */

typedef enum MdixType {
    MDIX_TYPE_UNKNOWN   = -1,
    MDIX_TYPE_NULL      =  0,
    MDIX_TYPE_BOOL      =  1,
    MDIX_TYPE_INT       =  2,
    MDIX_TYPE_FLOAT     =  3,
    MDIX_TYPE_DOUBLE    =  4,
    MDIX_TYPE_STRING    =  5,
    MDIX_TYPE_DATE      =  6,
    MDIX_TYPE_TIMESTAMP =  7,
    MDIX_TYPE_HEX_COLOR =  8,
    MDIX_TYPE_BLOB      =  9,
    MDIX_TYPE_REGEX     = 10,
    MDIX_TYPE_ARRAY     = 11,
    MDIX_TYPE_OBJECT    = 12,
    MDIX_TYPE_TUPLE     = 13,
    MDIX_TYPE_ENUM      = 14
} MdixType;
/* ── Type inspection ─────────────────────────────────────────────────────── */

MdixType mdix_get_type(const void* handle, const char* path);
/* ── Memory management ───────────────────────────────────────────────────── */

void mdix_free_string(char* s);
/* ── Error reporting ─────────────────────────────────────────────────────── */

const char* mdix_get_last_error(void);
void        mdix_clear_error(void);
/* ── Builder lifecycle ───────────────────────────────────────────────────── */

void*   mdix_builder_new(void);
void    mdix_builder_free(void* builder);
int32_t mdix_builder_entry_count(const void* builder);
bool    mdix_builder_clear(void* builder);
/* ── Builder write ───────────────────────────────────────────────────────── */

bool mdix_builder_set_string(void* builder, const char* path, const char* value);
bool mdix_builder_set_int(void* builder, const char* path, int32_t value);
bool mdix_builder_set_float(void* builder, const char* path, float value);
bool mdix_builder_set_double(void* builder, const char* path, double value);
bool mdix_builder_set_bool(void* builder, const char* path, bool value);
bool mdix_builder_remove(void* builder, const char* path);
/* ── Builder read-back ───────────────────────────────────────────────────── */

bool    mdix_builder_has_key(const void* builder, const char* path);
char*   mdix_builder_get_string(const void* builder, const char* path);
int32_t mdix_builder_get_int(const void* builder, const char* path);
float   mdix_builder_get_float(const void* builder, const char* path);
double  mdix_builder_get_double(const void* builder, const char* path);
bool    mdix_builder_get_bool(const void* builder, const char* path);
/* ── Builder persistence ─────────────────────────────────────────────────── */

bool  mdix_builder_save(const void* builder, const char* path);
char* mdix_builder_to_string(const void* builder);