ffi/builds/build_54/MdixNative.cs


        /// <summary>
        ///  Return the last error message as a null-terminated C string, or null on success.
        ///
        ///  The returned pointer is valid only until the next mdix FFI call.
        ///  Copy the string immediately — do not cache the pointer.
        ///  Do NOT free this pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_last_error();

        /// <summary>
        ///  Clear the last error without making any other call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_clear_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_clear_error();

        /// <summary>
        ///  Create a new empty builder handle.
        ///
        ///  Returns an opaque void pointer. The caller must free it with mdix_builder_free().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_builder_new();

        /// <summary>
        ///  Free a builder handle. Passing null is safe.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_builder_free(void* builder);

        /// <summary>
        ///  Return the number of entries currently in the builder. Returns -1 if null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_entry_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_entry_count(void* builder);

        /// <summary>
        ///  Remove all entries from the builder without freeing the handle.
        ///
        ///  Returns true on success, false if the builder is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_clear", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_clear(void* builder);

        /// <summary>
        ///  Set a string value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_string(void* builder, byte* path, byte* value);

        /// <summary>
        ///  Set an integer value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_int(void* builder, byte* path, int value);

        /// <summary>
        ///  Set a float value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_float(void* builder, byte* path, float value);

        /// <summary>
        ///  Set a double value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_double(void* builder, byte* path, double value);

        /// <summary>
        ///  Set a boolean value at the given dotted path.
        ///
        ///  Returns true on success, false if the builder or path is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_set_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_bool(void* builder, byte* path, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>
        ///  Remove a key from the builder.
        ///
        ///  Returns true if the key existed and was removed, false otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_remove(void* builder, byte* path);

        /// <summary>
        ///  Check whether a key exists in the builder.
        ///
        ///  Returns false if the builder is null or the key is not present.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_has_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_has_key(void* builder, byte* path);

        /// <summary>
        ///  Get a string value from the builder by dotted path.
        ///
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_get_string(void* builder, byte* path);

        /// <summary>
        ///  Get an integer value from the builder by dotted path.
        ///
        ///  Returns 0 on failure. Use mdix_builder_has_key() to distinguish 0 from not-found.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_get_int(void* builder, byte* path);

        /// <summary>
        ///  Get a float value from the builder by dotted path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float mdix_builder_get_float(void* builder, byte* path);

        /// <summary>
        ///  Get a double value from the builder by dotted path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double mdix_builder_get_double(void* builder, byte* path);

        /// <summary>
        ///  Get a boolean value from the builder by dotted path. Returns false on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_get_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_get_bool(void* builder, byte* path);

        /// <summary>
        ///  Save the builder contents to a .mdix file on disk.
        ///
        ///  Creates the file and any intermediate directories automatically.
        ///  Returns true on success, false on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_save", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_save(void* builder, byte* path);

        /// <summary>
        ///  Serialize the builder contents to a .mdix format string.
        ///
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_to_string(void* builder);


    }


    /// <summary>
    ///  Type discriminants returned by mdix_get_type().
    ///
    ///  Maps 1:1 to DixValue variants. Use these constants on the C# side to decide
    ///  which getter to call after mdix_get_type() returns.
    ///  Unknown (-1) means the path does not exist or the handle is null.
    /// </summary>
    internal enum MdixType : int
    {
        Unknown = -1,
        Null = 0,
        Bool = 1,
        Int = 2,
        Float = 3,
        Double = 4,
        String = 5,
        Date = 6,
        Timestamp = 7,
        HexColor = 8,
        Blob = 9,
        Regex = 10,
        Array = 11,
        Object = 12,
        Tuple = 13,
        Enum = 14,
    }


}
